# python3-config-rs

./: Cargo.toml  README.md
src/: lib.rs
tests/fixtures/: cpython38_sysconfigdata__darwin_darwin.py
