[package]
name = "python3-config"
version = "0.2.0"
authors = ["messense <messense@icloud.com>"]
description = "Read Python 3 sysconfigdata in Rust"
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/messense/python3-config-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
rustpython-parser = "0.1.2"
